--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "browser-sync": "^2.26.7",
     "gulp": "^4.0.2",
     "gulp-sass": "^4.0.2",
+    "gulp-sass-glob": "^1.1.0",
     "gulp-sourcemaps": "^1.5.2"
   },
   "devDependencies": {
